# mace

./: .gitignore  CMakeLists.txt  index.html  index.html.1  log  makenn.sh  opt_batch_model.txt  opt_combine_qkv.txt
cmake/toolchains/: aarch64-linux-gnu.cmake  qnn.cmake  qnx.cmake
include/mace/port/: env.h
lemon/: mobilenet.yml
mace/codegen/: CMakeLists.txt
mace/core/: tensor.cc  tensor.h
mace/core/flow/: base_flow.cc
mace/core/net/: serial_net.cc
mace/core/ops/: operator.cc
mace/flows/: CMakeLists.txt
mace/libmace/: CMakeLists.txt
mace/libmace/engines/: serial_engine.cc
mace/ops/: CMakeLists.txt  activation.h  batch_norm.cc  cast.cc  eltwise.cc  gather.cc  matmul.cc  pad.cc  slice.cc  softmax.cc  unsqueeze.cc
mace/ops/common/: activation_type.h
mace/ops/ref/: activation.cc
mace/port/: CMakeLists.txt
mace/port/qnn/: CMakeLists.txt  env.cc
mace/port/qnx/: CMakeLists.txt  env.cc  env.h
mace/rpcmems/: CMakeLists.txt
mace/rpcmems/qualcomm/: qualcomm_rpcmem.cc  qualcomm_rpcmem.h
mace/runtimes/: CMakeLists.txt
mace/runtimes/hexagon/: CMakeLists.txt
mace/tools/: CMakeLists.txt  ais_inference.h  ais_inference_base.h  ais_inference_hexagon.cc  ais_inference_hexagon.h  gsd_run.cc  mace_run.cc  status.h
mace/utils/: CMakeLists.txt
test/ccbenchmark/: CMakeLists.txt
tools/: device.py  validate.py
tools/cmake/: cmake-build-aarch64-linux-gnu.sh  cmake-build-arm-linux-gnueabihf.sh  cmake-build-arm64-v8a.sh  cmake-build-armeabi-v7a.sh  cmake-build-host.sh  cmake-build-qnn.sh  cmake-build-qnx.sh
tools/python/: convert.py  run_model.py  run_target.py  validate.py
tools/python/py_proto/: __init__.py
tools/python/quantize/: quantize_stat.py
tools/python/transform/: base_converter.py  hexagon_converter.py  onnx_converter.py  transformer.py
tools/python/utils/: config_parser.py  device.py  util.py
workspace/: conformer_cpu.yml  conformer_dsp.yml  export_attention.py  export_matmul.py  mace.sh  tojson.py  transformer-no-where.yml  transformer-no-where_cpu.yml  transformer-no-where_dsp.yml
workspace/attention/: attn_cpu.yml  attn_dsp.yml  batch_qkv_cpu.yml  batch_qkv_dsp.yml  com_sim_qkv_cpu.yml  com_sim_qkv_dsp.yml  combine_matmul_cpu.yml  combine_matmul_dsp.yml  combine_qkv_cpu.yml  combine_qkv_dsp.yml  overall_log  range_log
workspace/attention/range_dir/: batch_overall_log  batch_range_log  com_sim_qkv_overall_log  com_sim_qkv_range_log  combine_overall_log  combine_qkv_overall_log  combine_qkv_range_log  combine_range_log  overall_rangelog_new  range_log_new
workspace/change_K/K10/: input.raw  matmul_K10.onnx  matmul_cpu.yml  matmul_dsp.yml  overall_log  range_log
workspace/change_K/K150/: input.raw  matmul_K150.onnx  matmul_cpu.yml  matmul_dsp.yml  overall_log  range_log
workspace/change_K/K30/: input.raw  matmul_K30.onnx  matmul_cpu.yml  matmul_dsp.yml  (+2 more)
workspace/conformer/: conformer_cpu.yml  conformer_dsp.yml  fold_constant.py
workspace/conformer_data/: overall_range  range_log
workspace/fig/: export_fig.py
workspace/minmax_rangelog/: change_conformer_range_log  transformer_range_log  yolo_range_log
workspace/models/: transformer-no-where.onnx
workspace/transformer/: transformer_cpu.yml  transformer_dsp.yml
workspace/transformer_data/: overall_range  range_log
workspace/yaml/: change_conformer_dsp.yml  transformer_dsp.yml  yolo_dsp.yml
(+252 files in other folders)
